Fix width and truncate search items

--- a/app/src/editor/canvas/components/ModuleSearch.pcss
+++ b/app/src/editor/canvas/components/ModuleSearch.pcss
@@ -6,8 +6,8 @@
   margin-left: auto;
   margin-right: auto;
   background: white;
-  min-width: 30vw;
-  max-width: 30vw;
+  min-width: 248px;
+  max-width: 248px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto 1fr;
@@ -131,9 +131,18 @@
   text-transform: none;
   letter-spacing: 0;
   line-height: 40px;
+}
+
+.ModuleSearch .Content .ModuleItem.WithCategory {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-gap: 12px;
+}
+
+.ModuleSearch .Content .ModuleItem .ModuleName {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .ModuleSearch .Content .ModuleItem .ModuleCategory {
@@ -142,6 +151,9 @@
   font-weight: 400;
   text-transform: uppercase;
   color: #ADADAD;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .ModuleSearch .Content .StreamItem {
@@ -152,6 +164,9 @@
   text-transform: none;
   letter-spacing: 0;
   line-height: 28px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .ModuleSearch .Content .StreamItem .Description {
@@ -160,6 +175,9 @@
   font-weight: 400;
   color: #ADADAD;
   line-height: 12px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .Overlay {
